--- a/.htaccess
+++ b/.htaccess
@@ -16,6 +16,7 @@ RewriteBase /
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.php [L]
 
 </IfModule>
 
